# ml4md

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
dataset/si/training/a-2.15/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.20/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.25/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.29/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.30/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.31/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.35/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/a-2.40/set.000/: box.npy  coord.npy  energy.npy  force.npy
dataset/si/training/c-0.99/set.000/: box.npy  coord.npy  energy.npy  force.npy
dpdata/vasp/: outcar.py
ml4md/: __main__.py  _cli.py
ml4md_lammps_scripts/: CH.airebo  diamond_supercell.cif  in.diamond  in.melt
model/crystal_everheart/: input.json
model/victoria_maxwell/: baseline_minimize_ev_curve.json  baseline_minimize_values.json  deepmd_minimize_ev_curve.json  deepmd_minimize_values.json  ev_curves.json  input.json  mp_149_ev_curve.json
system/si/baseline/: minimize.lmp
system/si/deepmd/: minimize.lmp
systems/silicon/: fit_evcurve.py  minimize.py
systems/silicon/baseline/: minimize.lmp
utility/: download_ev_curve.py  eos.py  ev_curve.py  fit_eos.py  lmp_minimize.py  muni_theme.py  optimize_dp_runtime_params.py  plot_ev_curves.py
(+52 files in other folders)
