[tool.poetry]
name = "ml4md"
version = "0.1.0"
description = "Implementation of various machine learning methods for molecular dynamics"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
anvil = {git = "https://github.com/hacksparr0w/anvil.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
