[tool.poetry]
name = "ml4md"
version = "0.1.0"
description = "Implementation of various machine learning methods for molecular dynamics"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
anvil = {git = "https://github.com/hacksparr0w/anvil.git", rev = "63453ae"}
click = "^8.1.3"
psutil = "^5.9.1"
ovito = "^3.7.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ml4md = "ml4md.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
